gke.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: milleros-production
  labels:
    app: milleros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: milleros
  template:
    metadata:
      labels:
        app: milleros
    spec:
      containers:
      - name: client
        image: gcr.io/milleros/client:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: milleros-production-client-service
  namespace: milleros-prod
  labels:
    app.kubernetes.io/managed-by: "gcp-cloud-build-deploy"
spec:
  type: LoadBalancer
  selector:
    app: milleros
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-no-rewrite
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: milleros-prod
      port:
        number: 80
  rules:
  - host: "frontend.milleros.com.ar"
    http:
      paths:
      - pathType: Prefix
        path: "/ui"
        backend:
          service:
            name: milleros
            port:
              number: 80
