k8s-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: milleros-client
  name: milleros-client
  namespace: milleros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: milleros-client
  template:
    metadata:
      labels:
        app: milleros-client
    spec:
      containers:
      - image: gcr.io/milleros/client:latest
        name: client
        ports:
        - containerPort: 3000 
---
apiVersion: v1
kind: Service
metadata:
  name: milleros-client
  namespace: milleros
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: milleros-client
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milleros-test
  namespace: milleros
  annotations: 
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - milleros.com.ar
    secretName: milleros-production-tls
  rules:
  - host: milleros.com.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: milleros-client
            port:
              number: 80
