k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: milleros-client
  name: milleros-client
  namespace: milleros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: milleros-client
  template:
    metadata:
      labels:
        app: milleros-client
    spec:
      containers:
      - image: gcr.io/milleros/client:latest
        name: client
        ports:
        - containerPort: 3000 
---
apiVersion: v1
kind: Service
metadata:
  name: milleros-client
  namespace: milleros
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: milleros-client
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milleros-test
  namespace: milleros
  annotations: 
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - milleros.com.ar
    secretName: milleros-production-tls
  rules:
  - host: milleros.com.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: milleros-client
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: milleros-server
  name: milleros-server
  namespace: milleros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: milleros-server
  template:
    metadata:
      labels:
        app: milleros-server
    spec:
      containers:
      - image: gcr.io/milleros/server:latest
        name: server
        command: ["gunicorn", "server.wsgi:application", "--bind", "0.0.0.0:8000"]
      - image: gcr.io/milleros/server:latest
        name: celery
        command: ["celery", "-A", "server", "worker", "-l", "INFO", "-E"]
      - image: gcr.io/milleros/server:latest
        name: celery-beats
        command: ["celery", "-A", "server", "beat", "--scheduler", "django_celery_beat.schedulers:DatabaseScheduler"]
      - image: gcr.io/milleros/server:latest
        name: celery-flower
        command: ["celery", "-A", "server", "flower", "--address=0.0.0.0", "--port=5555"]
---
apiVersion: v1
kind: Service
metadata:
  name: milleros-server
  namespace: milleros
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: milleros-server
---
apiVersion: v1
kind: Service
metadata:
  name: milleros-server-flower
  namespace: milleros
spec:
  ports:
  - port: 5555
    targetPort: 5555
    protocol: TCP
  selector:
    app: milleros-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milleros-backend
  namespace: milleros
  annotations: 
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.milleros.com.ar
    secretName: milleros-server-production-tls
  rules:
  - host: api.milleros.com.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: milleros-server
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milleros-backend-flower
  namespace: milleros
  annotations: 
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - flower.milleros.com.ar
    secretName: milleros-server-flower-production-tls
  rules:
  - host: flower.milleros.com.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: milleros-server-flower
            port:
              number: 5555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: milleros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis
        name: redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: milleros
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
