kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: milleros-client
  name: milleros-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: milleros-client
  template:
    metadata:
      labels:
        app: milleros-client
    spec:
      containers:
      - image: ghcr.io/ssaid/trackmiles/client:latest
        name: client
        ports:
        - containerPort: 80 
---
apiVersion: v1
kind: Service
metadata:
  name: milleros-client
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: milleros-client
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milleros-test
  namespace: milleros-test
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test.milleros.com.ar
    secretName: milleros-production-tls
  rules:
  - host: test.milleros.com.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: milleros-client
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: milleros-celery-workers
  labels:
    app: milleros-celery-workers
  namespace: milleros-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: milleros-celery-workers
  template:
    metadata:
      labels:
        app: milleros-celery-workers
    spec:
      containers:
      - image: ghcr.io/trackmiles/server:latest
        name: celery
        command: ["celery", "-A", "server", "worker", "-l", "INFO", "-E"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: milleros-server
  name: milleros-server
  namespace: milleros-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: milleros-server
  template:
    metadata:
      labels:
        app: milleros-server
    spec:
      containers:
      - image: ghcr.io/trackmiles/server:latest
        name: server
        command: ["gunicorn", "server.wsgi:application", "--bind", "0.0.0.0:8000"]
      - image: ghcr.io/trackmiles/server:latest
        name: celery-beats
        command: ["celery", "-A", "server", "beat", "--scheduler", "django_celery_beat.schedulers:DatabaseScheduler"]
      - image: ghcr.io/trackmiles/server:latest
        name: celery-flower
        command: ["celery", "-A", "server", "flower", "--address=0.0.0.0", "--port=5555"]
---
apiVersion: v1
kind: Service
metadata:
  name: milleros-server
  namespace: milleros-test
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: milleros-server
---
apiVersion: v1
kind: Service
metadata:
  name: milleros-server-flower
  namespace: milleros-test
spec:
  ports:
  - port: 5555
    targetPort: 5555
    protocol: TCP
  selector:
    app: milleros-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milleros-backend
  namespace: milleros-test
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.test.milleros.com.ar
    secretName: milleros-server-production-tls
  rules:
  - host: api.test.milleros.com.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: milleros-server
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milleros-backend-flower
  namespace: milleros-test
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - flower.test.milleros.com.ar
    secretName: milleros-server-flower-production-tls
  rules:
  - host: flower.test.milleros.com.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: milleros-server-flower
            port:
              number: 5555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: milleros-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis
        name: redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: milleros-test
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
